[package]
name = "nl-dump"
version = "0.1.1"
authors = ["Tabor Kelly <taborkelly@gmail.com>"]
license = "Apache-2.0/BSD-3-Clause-Clear/MIT"
description = "A netlink (mostly RT_NETLINK) disector."
homepage = "https://github.com/TaborKelly/nl-utils"
build = "build.rs"

[dependencies]
getopts = "0.2"
log = "0.3.0"
env_logger = "0.3.0"
pcap = "0.5.0"
libc = "0.1.0"
byteorder = "0.4.0"
enum_primitive = "0.1.0"
num = "0.1.0"
